--- a/article.html
+++ b/article.html
@@ -9,16 +9,20 @@
     <script src="js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
-    <script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script>
     <style>
         .tabs .indicator {
             background-color: #ffffff;
         }
-        .website{
-            background-color: rgba(255,255,255,0.3);
+
+        .website {
+            background-color: rgba(255, 255, 255, 0.3);
             padding: 5px;
-            border-radius:5px;
+            border-radius: 5px;
+        }
+        h1,h2,h3,h4,h5{
+            color: rgb(255, 128, 171)
         }
     </style>
     <script type="text/javascript">
@@ -31,7 +35,13 @@
                     var converter = new showdown.Converter();
                     var html = converter.makeHtml(response.body);
                     $('#article-content').html(converter.makeHtml(response.body));
-                    $('img').addClass('col s12')
+                    $('img').addClass('col s12');
+                    $('h1').addClass('col s12');
+                    $('h2').addClass('col s12');
+                    $('h3').addClass('col s12');
+                    $('h4').addClass('col s12');
+                    $('h5').addClass('col s12');
+                    $('p').addClass('col s12')
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
                     Materialize.toast("未知错误", 3000);
@@ -43,52 +53,37 @@
 
 <body>
     <nav class="nav-wrapper pink accent-1">
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">地方电磁阀肥肠粉</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse">
-                <i class="fas fa-bars"></i>
-            </a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li>
-                    <a href="https://github.com/ChenViVi">
-                        <i class="fab fa-github"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://weibo.com/p/1005053101937447/home?from=page_100505&mod=TAB&is_all=1">
-                        <i class="fab fa-weibo"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://steamcommunity.com/profiles/76561198300793241">
-                        <i class="fab fa-steam"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul class="side-nav" id="mobile-demo">
-                <li>
-                    <a href="https://github.com/ChenViVi">
-                        <i class="fab fa-github"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://weibo.com/p/1005053101937447/home?from=page_100505&mod=TAB&is_all=1">
-                        <i class="fab fa-weibo"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://steamcommunity.com/profiles/76561198300793241">
-                        <i class="fab fa-steam"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        
+        <a href="#" class="brand-logo center">This is me</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse">
+            <i class="fas fa-bars"></i>
+        </a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li class="active">
+                <a href="#">
+                    <i class="material-icons left">home</i>主页</a>
+            </li>
+            <li>
+                <a href="bibi.html">
+                    <i class="material-icons left">send</i>说说</a>
+            </li>
+            <li>
+                <a href="music.html">
+                    <i class="material-icons left">library_music</i>音乐</a>
+            </li>
+            <li>
+                <a href="code.html">
+                    <i class="material-icons left">code</i>项目</a>
+            </li>
+            <li>
+                <a href="about.html">
+                    <i class="material-icons left">info</i>了解我</a>
+            </li>
+        </ul>
     </nav>
     <div id="tab1" class="active " style="margin-top: 20px;">
         <div style="margin-left: 20%;margin-right: 20%;">
             <div class="card-panel row" id="article-content">
-                    <img class="col s12" src="http://img.valorachen.top/18-6-17/30900391.jpg" alt="">
+                <img class="col s12" src="http://img.valorachen.top/18-6-17/30900391.jpg" alt="">
             </div>
         </div>
     </div>
