--- a/article.html
+++ b/article.html
@@ -2,91 +2,96 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>地方电磁阀肥肠粉</title>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="css/materialize.min.css">
-    <script src="js/materialize.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
-        crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script>
-    <style>
-        .tabs .indicator {
-            background-color: #ffffff;
-        }
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>地方电磁阀肥肠粉</title>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <link rel="stylesheet" href="css/materialize.min.css">
+  <script src="js/materialize.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script>
+  <style>
+    .tabs .indicator {
+      background-color: #ffffff;
+    }
 
-        .website {
-            background-color: rgba(255, 255, 255, 0.3);
-            padding: 5px;
-            border-radius: 5px;
+    .website {
+      background-color: rgba(255, 255, 255, 0.3);
+      padding: 5px;
+      border-radius: 5px;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      color: rgb(255, 128, 171)
+    }
+  </style>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $.ajax({
+        url: "https://api.github.com/repos/ChenViViPage/test/issues/3",
+        type: "get",
+        dataType: 'json',
+        success: function (response) {
+          var converter = new showdown.Converter();
+          var html = converter.makeHtml(response.body);
+          $('#article-content').html(converter.makeHtml(response.body));
+          $('img').addClass('col s12');
+          $('h1').addClass('col s12');
+          $('h2').addClass('col s12');
+          $('h3').addClass('col s12');
+          $('h4').addClass('col s12');
+          $('h5').addClass('col s12');
+          $('p').addClass('col s12');
+        },
+        error: function (jqXHR, textStatus, errorThrown) {
+          Materialize.toast("未知错误", 3000);
         }
-        h1,h2,h3,h4,h5{
-            color: rgb(255, 128, 171)
-        }
-    </style>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $.ajax({
-                url: "https://api.github.com/repos/ChenViViPage/test/issues/3",
-                type: "get",
-                dataType: 'json',
-                success: function (response) {
-                    var converter = new showdown.Converter();
-                    var html = converter.makeHtml(response.body);
-                    $('#article-content').html(converter.makeHtml(response.body));
-                    $('img').addClass('col s12');
-                    $('h1').addClass('col s12');
-                    $('h2').addClass('col s12');
-                    $('h3').addClass('col s12');
-                    $('h4').addClass('col s12');
-                    $('h5').addClass('col s12');
-                    $('p').addClass('col s12')
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    Materialize.toast("未知错误", 3000);
-                }
-            });
-        });
-    </script>
+      });
+    });
+  </script>
 </head>
 
 <body>
-    <nav class="nav-wrapper pink accent-1">
-        <a href="#" class="brand-logo center">This is me</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse">
-            <i class="fas fa-bars"></i>
-        </a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li class="active">
-                <a href="#">
-                    <i class="material-icons left">home</i>主页</a>
-            </li>
-            <li>
-                <a href="bibi.html">
-                    <i class="material-icons left">send</i>说说</a>
-            </li>
-            <li>
-                <a href="music.html">
-                    <i class="material-icons left">library_music</i>音乐</a>
-            </li>
-            <li>
-                <a href="code.html">
-                    <i class="material-icons left">code</i>项目</a>
-            </li>
-            <li>
-                <a href="about.html">
-                    <i class="material-icons left">info</i>了解我</a>
-            </li>
-        </ul>
-    </nav>
-    <div id="tab1" class="active " style="margin-top: 20px;">
-        <div style="margin-left: 20%;margin-right: 20%;">
-            <div class="card-panel row" id="article-content">
-                <img class="col s12" src="http://img.valorachen.top/18-6-17/30900391.jpg" alt="">
-            </div>
-        </div>
+  <nav class="nav-wrapper pink accent-1">
+    <a href="#" class="brand-logo center">This is me</a>
+    <a href="#" data-activates="mobile-demo" class="button-collapse">
+      <i class="fas fa-bars"></i>
+    </a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li>
+        <a href="#">
+          <i class="material-icons left">home</i>主页</a>
+      </li>
+      <li>
+        <a href="bibi.html">
+          <i class="material-icons left">send</i>说说</a>
+      </li>
+      <li>
+        <a href="music.html">
+          <i class="material-icons left">library_music</i>音乐</a>
+      </li>
+      <li>
+        <a href="code.html">
+          <i class="material-icons left">code</i>项目</a>
+      </li>
+      <li>
+        <a href="about.html">
+          <i class="material-icons left">info</i>了解我</a>
+      </li>
+    </ul>
+  </nav>
+  <div id="tab1" class="active " style="margin-top: 20px;">
+    <div style="margin-left: 20%;margin-right: 20%;">
+      <div class="card-panel row" id="article-content">
+        <img class="col s12" src="http://img.valorachen.top/18-6-17/30900391.jpg" alt="">
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
