--- a/article.html
+++ b/article.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>地方电磁阀肥肠粉</title>
+  <title>This is me</title>
   <script src="js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="css/materialize.min.css">
   <script src="js/materialize.min.js"></script>
@@ -33,7 +33,7 @@
   <script type="text/javascript">
     $(document).ready(function () {
       $.ajax({
-        url: "https://api.github.com/repos/ChenViViPage/test/issues/3",
+        url: "https://api.github.com/repos/ChenViVi/me/issues/14",
         type: "get",
         dataType: 'json',
         success: function (response) {
@@ -57,38 +57,78 @@
 </head>
 
 <body>
-  <nav class="nav-wrapper pink accent-1">
-    <a href="#" class="brand-logo center">This is me</a>
-    <a href="#" data-activates="mobile-demo" class="button-collapse">
-      <i class="fas fa-bars"></i>
-    </a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li>
-        <a href="#">
-          <i class="material-icons left">home</i>主页</a>
-      </li>
-      <li>
-        <a href="bibi.html">
-          <i class="material-icons left">send</i>说说</a>
-      </li>
-      <li>
-        <a href="music.html">
-          <i class="material-icons left">library_music</i>音乐</a>
-      </li>
-      <li>
-        <a href="code.html">
-          <i class="material-icons left">code</i>项目</a>
-      </li>
-      <li>
-        <a href="about.html">
-          <i class="material-icons left">info</i>了解我</a>
-      </li>
-    </ul>
+
+  <nav>
+    <div class="nav-wrapper pink accent-1">
+      <a href="#!" class="brand-logo">&nbsp;&nbsp;This is me</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse">
+        <i class="material-icons">menu</i>
+      </a>
+      <ul class="right hide-on-med-and-down">
+        <li>
+          <a href="index.html">
+            <i class="material-icons left">home</i>主页</a>
+        </li>
+        <li>
+          <a href="bibi.html">
+            <i class="material-icons left">send</i>说说</a>
+        </li>
+        <li>
+          <a href="code.html">
+            <i class="material-icons left">code</i>项目</a>
+        </li>
+        <li>
+          <a href="music.html">
+            <i class="material-icons left">library_music</i>音乐</a>
+        </li>
+        <li>
+          <a href="game.html">
+            <i class="material-icons left">games</i>游戏</a>
+        </li>
+        <li>
+          <a href="about.html">
+            <i class="material-icons left">info</i>了解我</a>
+        </li>
+        <li>
+          <a href="friends.html">
+            <i class="material-icons left">mood</i>友链</a>
+        </li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li>
+          <a href="index.html">
+            <i class="material-icons left">home</i>主页</a>
+        </li>
+        <li>
+          <a href="bibi.html">
+            <i class="material-icons left">send</i>说说</a>
+        </li>
+        <li>
+          <a href="code.html">
+            <i class="material-icons left">code</i>项目</a>
+        </li>
+        <li>
+          <a href="music.html">
+            <i class="material-icons left">library_music</i>音乐</a>
+        </li>
+        <li>
+          <a href="game.html">
+            <i class="material-icons left">games</i>游戏</a>
+        </li>
+        <li>
+          <a href="about.html">
+            <i class="material-icons left">info</i>了解我</a>
+        </li>
+        <li>
+          <a href="friends.html">
+            <i class="material-icons left">mood</i>友链</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <div id="tab1" class="active " style="margin-top: 20px;">
     <div style="margin-left: 20%;margin-right: 20%;">
       <div class="card-panel row" id="article-content">
-        <img class="col s12" src="http://img.valorachen.top/18-6-17/30900391.jpg" alt="">
       </div>
     </div>
   </div>
