更新文章详情样式

--- a/article.html
+++ b/article.html
@@ -47,6 +47,7 @@
           $('h4').addClass('col s12');
           $('h5').addClass('col s12');
           $('p').addClass('col s12');
+          $('blockquote').addClass('col s12');
         },
         error: function (jqXHR, textStatus, errorThrown) {
           Materialize.toast("未知错误", 3000);
