--- a/article.html
+++ b/article.html
@@ -72,7 +72,7 @@
         </li>
         <li>
           <a href="bibi.html">
-            <i class="material-icons left">send</i>说说</a>
+            <i class="material-icons left">send</i>动态</a>
         </li>
         <li>
           <a href="code.html">
