修复引用资源错误的问题

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script>
-  <link rel="stylesheet" href="default.css">
-  <script src="highlight.pack.js"></script>
+  <link rel="stylesheet" href="css/default.css">
+  <script src="js/highlight.pack.js"></script>
   <style>
     .tabs .indicator {
       background-color: #ffffff;
