--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="https://cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script>
   <link rel="stylesheet" href="css/default.css">
   <script src="js/highlight.pack.js"></script>
+  <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+  <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
   <style>
     .tabs .indicator {
       background-color: #ffffff;
@@ -199,6 +201,18 @@
     <div class="row center" style="margin-bottom: 20px;">
       <a id="btn-load-more" class="waves-effect waves-light btn  pink accent-1" onclick="load_more()">加载更多</a>
     </div>
+    <div id="fuck"></div>
+    <script>
+      var gitment = new Gitment({
+        owner: 'ChenViVi',
+        repo: 'eden',
+        oauth: {
+          client_id: 'Iv1.faba09a79bd45d55',
+          client_secret: 'a55d16b02b8211cddcde6c2aa2ccbf14149e03b7',
+        },
+      })
+      gitment.render('fuck')
+    </script>
   </div>
 </body>
 
