--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           client_secret: client_secret,
         },
       });
-      //gitment.init();
+      gitment.init();
       gitment.render('comments');
       $('img').addClass('col s12');
       $('h1').addClass('col s12');
