--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/default.css">
   <script src="js/highlight.pack.js"></script>
   <link rel="stylesheet" href="css/gitment.css">
+  <link rel="stylesheet" href="http://downland.valorachen.top/gitment.css">
   <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
   <style>
     .tabs .indicator {
