--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>This is me</title>
+  <title>Eden</title>
   <script src="js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="css/materialize.min.css">
   <script src="js/materialize.min.js"></script>
@@ -11,16 +11,13 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.bootcss.com/showdown/1.5.0/showdown.min.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <link rel="stylesheet" href="css/default.css">
+  <script src="js/highlight.pack.js"></script>
+  <link rel="stylesheet" href="http://downland.valorachen.top/gitment.css">
+  <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
   <style>
     .tabs .indicator {
       background-color: #ffffff;
-    }
-
-    .website {
-      background-color: rgba(255, 255, 255, 0.3);
-      padding: 5px;
-      border-radius: 5px;
     }
 
     h1,
@@ -28,47 +25,114 @@
     h3,
     h4,
     h5 {
-      color: rgb(255, 128, 171)
+      color: rgb(255, 128, 171);
+    }
+
+    h1 {
+      font-size: 3.2rem;
+    }
+
+    h2 {
+      font-size: 2.56rem;
+    }
+
+    h3 {
+      font-size: 2.02rem;
+    }
+
+    h4 {
+      font-size: 1.58rem;
+    }
+
+    h5 {
+      font-size: 1.24rem;
+    }
+
+    h6 {
+      font-size: 1rem;
     }
   </style>
   <script type="text/javascript">
+    var user_name = 'ChenViVi';
+    var repos_name = 'eden';
+    var access_token = 'ec2a936bb52af1e7510ad241874207a23f4dd1d7'
+    var page = 1;
+    var page_size = 10;
+    var client_id = '7806cf101f835fa53876';
+    var client_secret = 'e934a83086472a5beff2546430260fe2281bde3d';
+    var converter = new showdown.Converter();
+    var article_list;
+    var article_content;
     $(document).ready(function () {
+      article_list = $('#article-list');
+      article_content = $('#article-list');
+      $(".button-collapse").sideNav();
+      load_content();
+    });
+
+    function load_content() {
       $.ajax({
-        url: "https://api.github.com/repos/ChenViVi/me/issues/15",
+        url: "https://api.github.com/repos/" + user_name + "/" + repos_name + "/issues",
         type: "get",
         dataType: 'json',
+        headers: {
+          Authorization: "token " + access_token
+        },
+        data: ("milestone=5" + "&creator=" + user_name + "&state=open"),
+        async: false,
         success: function (response) {
-          var converter = new showdown.Converter();
-          var html = converter.makeHtml(response.body);
-          $('#article-content').html(converter.makeHtml(response.body));
+          var article = response[0];
+          alert(article.title);
+          $('.container').html(
+            '<div class="card-panel row" id="article-content">' +
+            converter.makeHtml(article.body) +
+            '</div>' +
+            '<div id="comments"></div>'
+          );
+          var gitment = new Gitment({
+            id: article.node_id,
+            owner: user_name,
+            repo: repos_name,
+            oauth: {
+              client_id: client_id,
+              client_secret: client_secret,
+            },
+          });
+          gitment.render('comments');
+          $('pre code').each(function (i, block) {
+            hljs.highlightBlock(block);
+          });
           $('img').addClass('col s12');
-          $('img').attr('data-action','zoom');
           $('h1').addClass('col s12');
           $('h2').addClass('col s12');
           $('h3').addClass('col s12');
           $('h4').addClass('col s12');
           $('h5').addClass('col s12');
           $('p').addClass('col s12');
+          $('pre').addClass('col s12');
+          $('code').addClass('col s12');
           $('blockquote').addClass('col s12');
+          $('pre code').each(function (i, block) {
+            hljs.highlightBlock(block);
+          });
         },
         error: function (jqXHR, textStatus, errorThrown) {
           Materialize.toast("未知错误", 3000);
         }
       });
-    });
+    }
   </script>
 </head>
 
 <body>
-
   <nav>
     <div class="nav-wrapper pink accent-1">
-      <a href="#!" class="brand-logo">&nbsp;&nbsp;This is me</a>
+      <a href="#!" class="brand-logo">&nbsp;&nbsp;Eden</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse">
         <i class="material-icons">menu</i>
       </a>
       <ul class="right hide-on-med-and-down">
-        <li>
+        <li class="active">
           <a href="index.html">
             <i class="material-icons left">home</i>主页</a>
         </li>
@@ -98,13 +162,13 @@
         </li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li>
+        <li class="active">
           <a href="index.html">
             <i class="material-icons left">home</i>主页</a>
         </li>
         <li>
           <a href="bibi.html">
-            <i class="material-icons left">send</i>说说</a>
+            <i class="material-icons left">send</i>动态</a>
         </li>
         <li>
           <a href="code.html">
@@ -129,8 +193,9 @@
       </ul>
     </div>
   </nav>
-      <div class="card-panel row" id="article-content" style="margin-left: 20%;margin-right: 20%;margin-top: 20px;">
-      </div>
+  <div class="container">
+    <div id="article-list" class="row"></div>
+  </div>
 </body>
 
 </html>
