--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Eden</title>
+  <script src="js/config.js"></script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="css/materialize.min.css">
   <script src="js/materialize.min.js"></script>
@@ -89,29 +90,8 @@
   <div class="container" id="container">
     <div id="article-list" class="row"></div>
     <div class="center" style="margin-bottom: 20px;">
-      <ul class="pagination">
-        <li class="disabled">
-          <a href="#!">
-            <i class="material-icons">chevron_left</i>
-          </a>
-        </li>
-        <li class="active pink accent-1">
-          <a href="#page1">1</a>
-        </li>
-        <li class="waves-effect">
-          <a href="#page2">2</a>
-        </li>
-        <li class="waves-effect">
-          <a href="#page3">3</a>
-        </li>
-        <li class="waves-effect">
-          <a href="#page4">4</a>
-        </li>
-        <li class="waves-effect">
-          <a href="#!">
-            <i class="material-icons">chevron_right</i>
-          </a>
-        </li>
+      <ul class="pagination" id="pagination">
+
       </ul>
     </div>
   </div>
